GearsetPOC/force-app/main/default/objects/Exec_Cases_Escalation_Rules__c/Exec_Cases_Escalation_Rules__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Exec Cases Escalation Rules</label>
</CustomObject>