GearsetPOC/force-app/main/default/objects/Exec_Cases_Escalation_Rules__c/fields/Exclusion_Owners_IDs__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_Owners_IDs__c</fullName>
    <description>List of case owners IDs whose cases NOT supposed to be escalated to Exec queue. Case IDs can be accompanied with any helpful text info, for example with user names to help to distinguish them. Extra info must be as short as possible to avoid field size limit crossing (which is 255 symbols max).</description>
    <label>Exclusion Owners IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>