GearsetPOC/force-app/main/default/objects/Exec_Cases_Escalation_Rules__c/fields/Sender_Domain_1__c.field-meta.xml
<CustomField>
    <fullName>Sender_Domain_1__c</fullName>
    <description>Partial email address, usually just domain. Any sender with email address containing this value will have associated cases escalated to Exec queue. Only one value is allowed. Low case only!!!</description>
    <label>Sender Domain 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>