GearsetPOC/force-app/main/default/objects/Exec_Cases_Escalation_Rules__c/fields/Senders_Part_2__c.field-meta.xml
<CustomField>
    <fullName>Senders_Part_2__c</fullName>
    <description>List of email senders whose related cases need to be escalated to Exec queue - part2. Low case only!!!</description>
    <label>Senders Part 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>