GearsetPOC/force-app/main/default/objects/Exec_Cases_Escalation_Rules__c/fields/Senders_Parts_4__c.field-meta.xml
<CustomField>
    <fullName>Senders_Parts_4__c</fullName>
    <label>Senders Parts 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>